modify docker jvm size

--- a/metric_monitor/docker-compose.yml
+++ b/metric_monitor/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - ../conf:/java-tron/conf
       - ./datadir:/java-tron/data # mount a local directory to make the blocks data persistent.
     command: >
-      -jvm "{-Xmx16g -Xms12g}"
+      -jvm "{-Xmx16g -Xms12g -XX:+UseConcMarkSweepGC}"
       -c ./conf/main_net_config.conf
       -d /java-tron/data
 
