--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,9 +15,9 @@ repos:
     rev: 3.0.0
     hooks:
       - id: shellcheck
-        args: ["--format=gcc"]
       - id: script-must-have-extension
-#      - id: git-dirty
+      - id: git-dirty
+        args: ["--quiet"]
 #      - id: git-check
       - id: forbid-binary
         exclude: '\.(jpg|jpeg|png|gif|bmp|svg|webp)$'
