--- a/.pre-commit-config-fix.yaml
+++ b/.pre-commit-config-fix.yaml
@@ -4,12 +4,17 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: check-json
-      - id: check-yaml
+      - id: pretty-format-json
+        args:
+          - '--autofix'
       - id: double-quote-string-fixer
       - id: check-shebang-scripts-are-executable
       - id: check-executables-have-shebangs
       - id: detect-private-key
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.14.0
+    hooks:
+      - id: yamlfmt
   - repo: 'https://github.com/jumanjihouse/pre-commit-hooks'
     rev: 3.0.0
     hooks:
@@ -17,6 +22,7 @@ repos:
       - id: script-must-have-extension
       - id: git-dirty
       - id: git-check
+        exclude: \.md$
       - id: forbid-binary
         exclude: \.(jpg|jpeg|png)$
   - repo: local # check java files format use a customized script
