fix(docker): update jvm heap size (#30)

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ metric_monitor/datadir
 private_net/datadir
 tron-docker.iml
 bin/
+/single_node/output-directory/
+/metric_monitor/logs/
+/private_net/logs/
