--- a/private_net/docker-compose.yml
+++ b/private_net/docker-compose.yml
@@ -8,15 +8,16 @@ services:
     deploy:
       resources:
         limits:
-          memory: 12g
+          memory: 16g
     ports:
       - "8090:8090" # for external http API request
       - "50051:50051" # for external rpc API request
     volumes:
       - ../conf:/java-tron/conf
       - ./datadir:/java-tron/data # mount a local directory to make the blocks data persistent.
+      - ./logs/tron-witness1:/java-tron/logs # map to host logs
     command: >
-      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}" -c /java-tron/conf/private_net_config_witness1.conf -d /java-tron/data -w
+      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -Xloggc:./logs/gc.log}" -c /java-tron/conf/private_net_config_witness1.conf -d /java-tron/data -w
 
     #  tron-witness2:
     #    image: tronprotocol/java-tron:latest
@@ -26,11 +27,12 @@ services:
     #    deploy:
     #      resources:
     #        limits:
-    #          memory: 12g
+    #          memory: 16g
     #    volumes:
     #      - ../conf:/java-tron/conf
+    #      - ./logs/tron-witness2:/java-tron/logs
     #    command: >
-    #      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}"
+    #      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -Xloggc:./logs/gc.log}"
     #      -c /java-tron/conf/private_net_config_witness2.conf
     #      -w
   tron-node1:
@@ -41,11 +43,12 @@ services:
     deploy:
       resources:
         limits:
-          memory: 12g
+          memory: 16g
     volumes:
       - ../conf:/java-tron/conf
+      - ./logs/tron-node1:/java-tron/logs
     command: >
-      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}" -c /java-tron/conf/private_net_config_others.conf
+      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -Xloggc:./logs/gc.log}" -c /java-tron/conf/private_net_config_others.conf
 
 #  tron-node2:
 #    image: tronprotocol/java-tron:latest
@@ -55,11 +58,12 @@ services:
 #    deploy:
 #      resources:
 #        limits:
-#          memory: 12g
+#          memory: 16g
 #    volumes:
 #      - ../conf:/java-tron/conf
+#      - ./logs/tron-node2:/java-tron/logs
 #    command: >
-#      -jvm "{-Xmx12g -Xms3g -XX:+UseConcMarkSweepGC}"
+#      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -Xloggc:./logs/gc.log}"
 #      -c /java-tron/conf/private_net_config_others.conf
 networks:
   tron_private_network:
