feat(tool): add trond (#26)

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,21 @@ tools/docker/reports/
 build/
 tmp/
 target/
-tools/dbfork/logs/
+logs/
 libs/
-metric_monitor/datadir
-private_net/datadir
+datadir/
+logs/
+output-directory/
 tron-docker.iml
 bin/
+
+trond
+!trond/
+.DS_Store
+go
+go1.*
+*FullNode_output-directory*
+
 /single_node/output-directory/
 /metric_monitor/logs/
 /private_net/logs/
