--- a/metric_monitor/push_mode/conf/prometheus-remote-write.yml
+++ b/metric_monitor/push_mode/conf/prometheus-remote-write.yml
@@ -21,11 +21,10 @@ scrape_configs:
           instance: fullnode-01
 
 # The remote_write configuration tells Prometheus to continuously write metrics to the Thanos Receive service.
+# Refer https://prometheus.io/docs/prometheus/latest/configuration/configuration/#remote_write
 remote_write:
   - url: http://thanos-receive:10908/api/v1/receive # if Thanos Receive service run on the same host with Prometheus
     remote_timeout: 30s
-    follow_redirects: true
-    enable_http2: true
     queue_config:
       capacity: 2500
       max_shards: 200 # the maximum number of shards, or parallelism, Prometheus will use for each remote write queue
@@ -36,5 +35,5 @@ remote_write:
       max_backoff: 5s
     metadata_config:
       send: true
-      send_interval: 3s
+      send_interval: 3s # How frequently metric metadata is sent to remote storage.
       max_samples_per_send: 500
