--- a/metric_monitor/push_mode/docker-compose-receive.yml
+++ b/metric_monitor/push_mode/docker-compose-receive.yml
@@ -13,14 +13,16 @@ services:
     ports:
       - "10907:10907"
       - "10908:10908"
+      - "10909:10909"
     command:
       - "receive"
       - "--tsdb.path=/receive/data"
+      - "--tsdb.retention=15d" # How long to retain raw samples on local storage.
       - "--grpc-address=0.0.0.0:10907"
       - "--http-address=0.0.0.0:10909"
+      - "--remote-write.address=0.0.0.0:10908"
       - "--label=receive_replica=\"0\""
       - "--label=receive_cluster=\"java-tron-mainnet\""
-      - "--remote-write.address=0.0.0.0:10908"
       - "--objstore.config-file=/receive/bucket_storage_minio.yml"
     restart: unless-stopped
 
