--- a/metric_monitor/push_mode/docker-compose-tron-prometheus.yml
+++ b/metric_monitor/push_mode/docker-compose-tron-prometheus.yml
@@ -32,7 +32,7 @@ services:
       - ./conf/prometheus-remote-write.yml:/etc/prometheus/prometheus.yml
       - ./prometheus_data:/prometheus
     command:
-      - --config.file=/etc/prometheus/prometheus.yml
+      - --config.file=/etc/prometheus/prometheus.yml # the default path to the configuration file
       - --storage.tsdb.path=/prometheus # the path where Prometheus stores its metric database
       - --storage.tsdb.retention.time=30d # takes about 1GB of disk space per month
       - --storage.tsdb.max-block-duration=30m #the maximum duration for a block of time series data that can be stored in the time series database (TSDB)
