start to add query part

--- a/metric_monitor/push_mode/docker-compose-tron-prometheus.yml
+++ b/metric_monitor/push_mode/docker-compose-tron-prometheus.yml
@@ -24,6 +24,8 @@ services:
     container_name: prometheus
     networks:
       - tron_network
+    ports:
+      - "9090:9090" # used for local query metrics
     deploy:
       resources:
         limits:
