--- a/logs_monitor/conf/promtail-config.yml
+++ b/logs_monitor/conf/promtail-config.yml
@@ -1,6 +1,6 @@
 server:
-  http:
-    port: 9080
+  http_listen_port: 9080
+  grpc_listen_port: 0
 
 positions:
   filename: /tmp/positions.yaml
@@ -14,5 +14,5 @@ scrape_configs:
       - targets:
           - localhost
         labels:
-          job: varlogs
-          __path__: /var/log/*.log
+          job: java-tron-node1-log
+          __path__: /var/log/*log
