--- a/logs_monitor/conf/loki-config.yml
+++ b/logs_monitor/conf/loki-config.yml
@@ -1,21 +1,24 @@
+# 需要运行的组件，默认all。测试中发现，定期删除日志记录需要额外指定：table-manager
+target: "all,table-manager"
+
 auth_enabled: false
 
 server:
   http_listen_port: 3100
+  grpc_listen_port: 9096
 
-ingester:
-  lifecycler:
-    address: 127.0.0.1
-    ring:
-      kvstore:
-        store: inmemory
-      replication_factor: 1
-    final_sleep: 0s
-  chunk_idle_period: 1h       # Any chunk not receiving new logs in this time will be flushed
-  max_chunk_age: 1h           # All chunks will be flushed when they hit this age, default is 1h
-  chunk_target_size: 1048576  # Loki will attempt to build chunks up to 1.5MB, flushing first if chunk_idle_period or max_chunk_age is reached first
-  chunk_retain_period: 30s    # Must be greater than index read cache TTL if using an index cache (Default index read cache TTL is 5m)
-  max_transfer_retries: 0     # Chunk transfers disabled
+# 配置Loki存储数据路径
+common:
+  path_prefix: /usr/local/loki/data
+  storage:
+    filesystem:
+      chunks_directory: /usr/local/loki/data/chunks
+      rules_directory: /usr/local/loki/data/rules
+  replication_factor: 1
+  ring:
+    instance_addr: 127.0.0.1
+    kvstore:
+      store: inmemory
 
 schema_config:
   configs:
@@ -23,42 +26,39 @@ schema_config:
       store: boltdb-shipper
       object_store: filesystem
       schema: v11
+      # 每24小时存储一个索引目录
       index:
         prefix: index_
+        period: 24h
+      chunks:
+        prefix: chunk_
         period: 24h
 
 storage_config:
   boltdb_shipper:
-    active_index_directory: /loki/boltdb-shipper-active
-    cache_location: /loki/boltdb-shipper-cache
-    cache_ttl: 24h         # Can be increased for faster performance over longer query periods, uses more disk space
+    active_index_directory: /usr/local/loki/data/boltdb/boltdb-shipper-active
+    cache_location: /usr/local/loki/data/boltdb/boltdb-shipper-cache
+    cache_ttl: 24h
     shared_store: filesystem
-  filesystem:
-    directory: /loki/chunks
 
 compactor:
-  working_directory: /loki/boltdb-shipper-compactor
+  working_directory: /usr/local/loki/data/boltdb/boltdb-shipper-compactor
   shared_store: filesystem
 
+# 限制配置
 limits_config:
+  # 拒绝历史数据开关
   reject_old_samples: true
+  # 拒绝历史数据最大时长
   reject_old_samples_max_age: 168h
 
-chunk_store_config:
-  max_look_back_period: 0s
-
+# 表管理配置
 table_manager:
-  retention_deletes_enabled: false
-  retention_period: 0s
-
+  # 删除历史数据开关
+  retention_deletes_enabled: true
+  # 删除历史数据时长，不能大于：limits_config.reject_old_samples_max_age
+  # 实际上保留时长：(table_manager.retention_period + schema_config.config.chunk.period) <= 保留时长 < (table_manager.retention_period + schema_config.config.chunk.period + 12h)
+  retention_period: 168h
+# alert-manager组件，不涉及
 ruler:
-  storage:
-    type: local
-    local:
-      directory: /loki/rules
-  rule_path: /loki/rules-temp
   alertmanager_url: http://localhost:9093
-  ring:
-    kvstore:
-      store: inmemory
-  enable_api: true
