--- a/logs_monitor/docker-compose.yml
+++ b/logs_monitor/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - ./datadir:/java-tron/data # mount a local directory to make the block data persistent.
       - ./logs:/java-tron/logs
     command: >
-      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -XX:+PrintGC -Xloggc:./logs/gc.log }" -c ./conf/main_net_config.conf
+      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -XX:+PrintGC -Xloggc:./logs/gc.log }" -c ./conf/main_net_config.conf -d /java-tron/data
 
   promtail:
     image: grafana/promtail:latest
@@ -35,6 +35,7 @@ services:
   loki:
     image: grafana/loki:latest
     container_name: loki
+    user: root
     networks:
       - tron_network
     ports:
@@ -43,7 +44,24 @@ services:
       - ./conf:/etc/loki
     command: >
       -config.file=/etc/loki/loki-config.yml
+      -config.expand-env=true
     restart: unless-stopped
+
+  minio: # about 5G of disk space for 1 year java-tron metrics, java-tron version xxx
+    image: minio/minio:RELEASE.2019-01-31T00-31-19Z
+    container_name: minio
+    user: root
+    networks:
+      - tron_network
+    restart: always  # Optional: Restart policy
+    ports:
+      - "9000:9000"  # Map port 9000 on the host to port 9000 in the container
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: melovethanos
+    volumes:
+      - ./minio:/data  # Bind mount the host directory to the container
+    command: server /data  # Command to run MinIO server
 
   grafana:
     image: grafana/grafana-oss
