--- a/logs_monitor/conf/loki-config.yml
+++ b/logs_monitor/conf/loki-config.yml
@@ -1,64 +1,63 @@
-# 需要运行的组件，默认all。测试中发现，定期删除日志记录需要额外指定：table-manager
-target: "all,table-manager"
-
 auth_enabled: false
 
 server:
   http_listen_port: 3100
   grpc_listen_port: 9096
+  log_level: debug
+  grpc_server_max_concurrent_streams: 1000
 
-# 配置Loki存储数据路径
 common:
-  path_prefix: /usr/local/loki/data
+  instance_addr: 127.0.0.1
+  path_prefix: /tmp/loki
   storage:
     filesystem:
-      chunks_directory: /usr/local/loki/data/chunks
-      rules_directory: /usr/local/loki/data/rules
+      chunks_directory: /tmp/loki/chunks
+      rules_directory: /tmp/loki/rules
   replication_factor: 1
   ring:
-    instance_addr: 127.0.0.1
     kvstore:
       store: inmemory
+
+query_range:
+  results_cache:
+    cache:
+      embedded_cache:
+        enabled: true
+        max_size_mb: 100
+
+limits_config:
+  metric_aggregation_enabled: true
 
 schema_config:
   configs:
     - from: 2020-10-24
-      store: boltdb-shipper
+      store: tsdb
       object_store: filesystem
-      schema: v11
-      # 每24小时存储一个索引目录
+      schema: v13
       index:
         prefix: index_
         period: 24h
-      chunks:
-        prefix: chunk_
-        period: 24h
 
-storage_config:
-  boltdb_shipper:
-    active_index_directory: /usr/local/loki/data/boltdb/boltdb-shipper-active
-    cache_location: /usr/local/loki/data/boltdb/boltdb-shipper-cache
-    cache_ttl: 24h
-    shared_store: filesystem
+pattern_ingester:
+  enabled: true
+  metric_aggregation:
+    loki_address: localhost:3100
 
-compactor:
-  working_directory: /usr/local/loki/data/boltdb/boltdb-shipper-compactor
-  shared_store: filesystem
-
-# 限制配置
-limits_config:
-  # 拒绝历史数据开关
-  reject_old_samples: true
-  # 拒绝历史数据最大时长
-  reject_old_samples_max_age: 168h
-
-# 表管理配置
-table_manager:
-  # 删除历史数据开关
-  retention_deletes_enabled: true
-  # 删除历史数据时长，不能大于：limits_config.reject_old_samples_max_age
-  # 实际上保留时长：(table_manager.retention_period + schema_config.config.chunk.period) <= 保留时长 < (table_manager.retention_period + schema_config.config.chunk.period + 12h)
-  retention_period: 168h
-# alert-manager组件，不涉及
 ruler:
   alertmanager_url: http://localhost:9093
+
+frontend:
+  encoding: protobuf
+
+# By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
+# analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
+#
+# Statistics help us better understand how Loki is used, and they show us performance
+# levels for most users. This helps us prioritize features and documentation.
+# For more information on what's sent, look at
+# https://github.com/grafana/loki/blob/main/pkg/analytics/stats.go
+# Refer to the buildReport method to see what goes into a report.
+#
+# If you would like to disable reporting, uncomment the following lines:
+#analytics:
+#  reporting_enabled: false
