--- a/logs_monitor/conf/promtail-config.yml
+++ b/logs_monitor/conf/promtail-config.yml
@@ -5,14 +5,28 @@ server:
 positions:
   filename: /tmp/positions.yaml
 
+#The clients block configures how Promtail connects to instances of Loki:
+# check https://grafana.com/docs/loki/latest/send-data/promtail/configuration/#clients
 clients:
   - url: http://loki:3100/loki/api/v1/push
+    batchsize: 1024 # Maximum batch size (in bytes) of logs to accumulate before sending to Loki
+    batchwait: 1s   # Maximum amount of time to wait before sending a batch, even if that batch isn't full.
 
+
+# The scrape_configs block configuring how Promtail can scrape logs from a series of targets using a specified discovery method
+# https://grafana.com/docs/loki/latest/send-data/promtail/configuration/#scrape_configs
 scrape_configs:
-  - job_name: system
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: java-tron-node1-log
-          __path__: /var/log/*log
+- job_name: system
+  # A static_configs allows specifying a list of targets and a common label set for them.
+  # https://grafana.com/docs/loki/latest/send-data/promtail/configuration/#static_configs
+  static_configs:
+  - targets:
+      - localhost # Configures the discovery to look on the current machine.
+    labels:
+      job: java-tron-node1-tron # The job label is used to differentiate between different sources of logs.
+      __path__: /var/log/*log  # The path matching the logs to be collected. It should be in the mounted path of the java-tron generated logs.
+  - targets:
+      - localhost # Configures the discovery to look on the current machine.
+    labels:
+      job: java-tron-node1-db # The job label is used to differentiate between different sources of logs.
+      __path__: /var/log/db/*log  # The path matching the logs to be collected. It should be in the mounted path of the java-tron generated logs.
