update loki config

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ go1.*
 /metric_monitor/push_mode/minio/
 /metric_monitor/push_mode/prometheus_data/
 /logs_monitor/minio/
+/logs_monitor/loki-data/
+/logs_monitor/promtail-data/
