--- a/logs_monitor/conf/promtail-config.yml
+++ b/logs_monitor/conf/promtail-config.yml
@@ -3,7 +3,7 @@ server:
   grpc_listen_port: 0
 
 positions:
-  filename: /tmp/positions.yaml
+  filename: /cache/positions.yaml # The path to the file containing the current position of the logs being read by Promtail.
 
 #The clients block configures how Promtail connects to instances of Loki:
 # check https://grafana.com/docs/loki/latest/send-data/promtail/configuration/#clients
