--- a/metric_monitor/push_mode/docker-compose.yml
+++ b/metric_monitor/push_mode/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     ports:
       - "8090:8090" # for external http API request
       - "9527:9527" # used for metric API
+      - "18888:18888" # for p2p node discovery
     volumes:
       - ../../conf:/java-tron/conf # ensure the config path is correct, make sure the config file metric is enabled
       - ./datadir:/java-tron/data # mount a local directory to make the block data persistent.
