--- a/logs_monitor/docker-compose-monolithic.yml
+++ b/logs_monitor/docker-compose-monolithic.yml
@@ -49,7 +49,8 @@ services:
       -config.file=/etc/loki/loki-minio.yml
     restart: unless-stopped
 
-  minio: # about 5G of disk space for 1 year java-tron metrics, java-tron version xxx
+  # Minio: which Loki uses to store its index and chunks.
+  minio:
     image: minio/minio:RELEASE.2019-01-31T00-31-19Z
     container_name: minio
     user: root
