--- a/logs_monitor/docker-compose-simple-scale.yml
+++ b/logs_monitor/docker-compose-simple-scale.yml
@@ -1,8 +1,8 @@
----
 networks:
   loki:
 
 services:
+  # Loki read component: which runs a Query Frontend and a Querier.
   read:
     image: grafana/loki:latest
     command: "-config.file=/etc/loki/config.yaml -target=read"
@@ -23,7 +23,7 @@ services:
       loki:
         aliases:
           - loki
-
+ # Loki write component: which runs a Distributor and an Ingester.
   write:
     image: grafana/loki:latest
     command: "-config.file=/etc/loki/config.yaml -target=write"
@@ -42,6 +42,20 @@ services:
       - minio
     networks:
       <<: *loki-dns
+
+  # Loki backend component: which runs an Index Gateway, Compactor, Ruler, Bloom Planner (experimental), Bloom Builder (experimental), and Bloom Gateway (experimental).
+  backend:
+    image: grafana/loki:latest
+    volumes:
+      - ./loki-config.yaml:/etc/loki/config.yaml
+    ports:
+      - "3100"
+      - "7946"
+    command: "-config.file=/etc/loki/config.yaml -target=backend -legacy-read-mode=false"
+    depends_on:
+      - gateway
+    networks:
+      - loki
 
   alloy:
     image: grafana/alloy:latest
@@ -115,19 +129,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - loki
-
-  backend:
-    image: grafana/loki:latest
-    volumes:
-      - ./loki-config.yaml:/etc/loki/config.yaml
-    ports:
-      - "3100"
-      - "7946"
-    command: "-config.file=/etc/loki/config.yaml -target=backend -legacy-read-mode=false"
-    depends_on:
-      - gateway
     networks:
       - loki
 
