--- a/logs_monitor/docker-compose.yml
+++ b/logs_monitor/docker-compose.yml
@@ -67,22 +67,35 @@ services:
     command: server /data  # Command to run MinIO server
 
   grafana:
-    image: grafana/grafana-oss
-    container_name: grafana
-    user: root
-    networks:
-      - tron_network
     environment:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-    deploy:
-      resources:
-        limits:
-          memory: 1g
+      - GF_FEATURE_TOGGLES_ENABLE=alertingSimplifiedRouting,alertingQueryAndExpressionsStepMode
+    entrypoint:
+      - sh
+      - -euc
+      - |
+        mkdir -p /etc/grafana/provisioning/datasources
+        cat <<EOF > /etc/grafana/provisioning/datasources/ds.yaml
+        apiVersion: 1
+        datasources:
+        - name: Loki
+          type: loki
+          access: proxy
+          orgId: 1
+          url: http://loki:3100
+          basicAuth: false
+          isDefault: true
+          version: 1
+          editable: false
+        EOF
+        /run.sh
+    image: grafana/grafana:latest
     ports:
       - "3000:3000"
-    restart: unless-stopped
+    networks:
+      - tron_network
 
 networks:
   tron_network:
