update helm deploy

--- a/logs_monitor/conf/loki-local-config.yml
+++ b/logs_monitor/conf/loki-local-config.yml
@@ -26,7 +26,7 @@ schema_config:
       object_store: s3
       schema: v13
       index:
-        prefix: index_ # Prefix for index files
+        prefix: loki_index_ # Prefix for index files
         period: 24h  # Period for creating new index files
 
 # Index files will be written locally at /loki/index and, eventually, will be shipped to the storage via tsdb-shipper.
@@ -38,6 +38,11 @@ storage_config:
   aws:
     s3: s3://minio:melovethanos@minio.:9000/loki # The endpoint for the s3-compatible API.
     s3forcepathstyle: true # needed to recognize the above endpoint as a path-style endpoint
+
+ingester:
+  chunk_idle_period: 30m  # Flush chunks after 30 minutes of
+  chunk_target_size: 1572864  # 1.5MB target before compression
+  max_chunk_age: 2h  # Force flush after 2h max
 
 query_range:
   results_cache:
