update connect with grafana

--- a/logs_monitor/helm/grafana-values.yml
+++ b/logs_monitor/helm/grafana-values.yml
@@ -13,7 +13,7 @@ persistence:
 datasources:
   datasources.yaml:
     apiVersion: 1
-    datasources:
+    datasources: # Preload a datasource list
       - name: Loki
         type: loki
         url: http://loki-gateway.default.svc.cluster.local # Loki gateway
