--- a/metric_monitor/docker-compose-quick-start.yml
+++ b/metric_monitor/docker-compose-quick-start.yml
@@ -17,7 +17,9 @@ services:
       - ./output-directory:/java-tron/output-directory # mount a local directory to make the block data persistent.
       - ./logs:/java-tron/logs
     command: >
-      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -XX:+PrintGC -Xloggc:./logs/gc.log }" -c ./conf/main_net_config.conf -d /java-tron/output-directory
+      -jvm "{-Xmx12g -Xmn2g -XX:+UseConcMarkSweepGC -XX:+PrintGC -Xloggc:./logs/gc.log }" -c ./conf/main_net_config.conf
+    environment:
+      - TZ=Asia/Shanghai
 
   prometheus:
     image: prom/prometheus:latest
